--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,24 @@
 @tailwind components;
 @tailwind utilities;
 
+@media print{
+  #noPrintArea{
+    display: none;
+  }
+  #printArea{
+    display: block;
+  }
+  body{
+    margin: 0;
+    padding: 0;
+    box-shadow: none;
+  }
+}
+@page{
+  size: auto;
+  margin: 0mm;
+}
+
 .rsw-ce ul {
   list-style: disc;
   padding-left: 2em;
