--- a/src/index.css
+++ b/src/index.css
@@ -14,10 +14,28 @@
     padding: 0;
     box-shadow: none;
   }
+  * {
+    -webkit-print-color-adjust: exact;
+    print-color-adjust: exact;
+  }
+
+  #printArea progress {
+    appearance: auto !important;
+    -webkit-appearance: auto !important;
+  }
+
+  .progress-bar {
+    background: initial !important;
+  }
 }
 @page{
   size: auto;
-  margin: 0mm;
+  margin: 0;
+}
+@media print {
+    body::before {
+        display: none !important; 
+    }
 }
 
 .rsw-ce ul {
